# django-api-online-shopping

./: README.md  db.sqlite3  pyproject.toml
core/: settings.py  urls.py
shop/: permissions.py  serializers.py  tests.py  views.py
shop/migrations/: 0001_initial.py
